crates/oxc_angular_compiler/tests/snapshots/integration_test__multiple_refs_partial_use.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    const _r1 = i0.ɵɵgetCurrentView();
    i0.ɵɵelement(0,"input",null,0)(2,"input",null,1)(4,"input",null,2);
    i0.ɵɵelementStart(6,"button",3);
    i0.ɵɵlistener("click",function TestComponent_Template_button_click_6_listener() {
      i0.ɵɵrestoreView(_r1);
      const usedRef_r2 = i0.ɵɵreference(1);
      return i0.ɵɵresetView(usedRef_r2.focus());
    });
    i0.ɵɵelementEnd();
  }
}
