crates/oxc_angular_compiler/tests/snapshots/integration_test__multiple_same_name_references_in_for.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_For_1_Template(rf,ctx) {
  if ((rf & 1)) {
    const _r1 = i0.ɵɵgetCurrentView();
    i0.ɵɵtext(0,"\n  ");
    i0.ɵɵelementStart(1,"tr");
    i0.ɵɵtext(2,"\n    ");
    i0.ɵɵelementStart(3,"td");
    i0.ɵɵtext(4,"\n      ");
    i0.ɵɵelementStart(5,"div",1,0);
    i0.ɵɵlistener("click",function TestComponent_For_1_Template_div_click_5_listener() {
      i0.ɵɵrestoreView(_r1);
      const widget_r2 = i0.ɵɵreference(6);
      return i0.ɵɵresetView(widget_r2.action1());
    });
    i0.ɵɵtext(7,"\n        First Widget\n      ");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(8,"\n    ");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(9,"\n    ");
    i0.ɵɵelementStart(10,"td");
    i0.ɵɵtext(11,"\n      ");
    i0.ɵɵelementStart(12,"div",1,0);
    i0.ɵɵlistener("click",function TestComponent_For_1_Template_div_click_12_listener() {
      i0.ɵɵrestoreView(_r1);
      const widget_r2 = i0.ɵɵreference(6);
      return i0.ɵɵresetView(widget_r2.action2());
    });
    i0.ɵɵtext(14,"\n        Second Widget\n      ");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(15,"\n    ");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(16,"\n  ");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(17,"\n");
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵrepeaterCreate(0,TestComponent_For_1_Template,18,0,null,null,
      i0.ɵɵrepeaterTrackByIdentity); }
  if ((rf & 2)) { i0.ɵɵrepeater(ctx.tasks()); }
}
