crates/oxc_angular_compiler/tests/snapshots/integration_test__nested_elements.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelementStart(0,"div")(1,"span");
    i0.ɵɵtext(2,"Inner");
    i0.ɵɵelementEnd()();
  }
}
